# autotube

./: Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: ci.yaml
.sqlx/: query-078a19f82681280fe9f3977578d348cd37340f0226bcb087c3e43b29d8ba3a56.json  query-2c1ac1b5bc1fc5a974a013929a53bda553abc37eedcca3542030f8dffe50ee5b.json  query-cfb025934192a912fae8dc22b52dc91c5680379333e660606247888dde6f8f85.json  query-e9ac9c0fa7dc1c82f50493a21bfd3065f6d835101a1de274737aa224f2fb979f.json
src/: db.rs  handlers.rs  jobs.rs  main.rs  rss.rs  trigger.rs  worker.rs
