[package]
name = "autotube"
authors = ["Lennart Oldenburg <hello@lennartoldenburg.de>"]
version = "0.1.0"
edition = "2024"
description = "Download YouTube videos, automatically by following channels and on-demand by submitting URLs."
license = "Apache-2.0"

[[bin]]
name = "autotube"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http2"] }
chrono = "0.4.42"
clap = { version = "4.5.52", features = ["derive", "env"] }
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["rustls-tls", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-rustls-aws-lc-rs"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["auth", "validate-request"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
